--- a/scss/base/_pre-config.scss
+++ b/scss/base/_pre-config.scss
@@ -277,7 +277,7 @@
       }
     }
     &__btn--gplus {
-      background-color: #dd4b39;
+      background-color: #e16faf;
       &:hover {
         background-color: darken(#dd4b39,5%);
       }
